<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="pageAccountVM" type="com.reynaldysapplication.app.modules.pageaccount.data.viewmodel.PageAccountVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearPageAccount"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_34pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumngroupnine"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_weight="1.0"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:gravity="end"
                android:id="@+id/linearColumnsettings"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStyleblue_800cornerRadius">
                <ImageView android:id="@+id/imageSettings"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_settings"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_settings"/>
                <ImageView android:id="@+id/imageEllipseFive"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_108pxh"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="@dimen/_108pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_ellipse5}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse5"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAbrahamSamad"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{pageAccountVM.pageAccountModel.txtAbrahamSamad}"
                    style="@style/txtPoppinsmedium15" tools:text="@string/lbl_abraham_samad"/>
                <LinearLayout android:id="@+id/linearRowdonasiselesai"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtDonasiSelesai"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginStart="@dimen/_22pxh"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:layout_weight="0.85"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{pageAccountVM.pageAccountModel.txtDonasiSelesai}"
                        style="@style/txtPoppinsmedium15_1" tools:text="@string/lbl_donasi_selesai"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTwentyEight"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_9pxv"
                        android:layout_marginEnd="@dimen/_21pxh"
                        android:layout_marginStart="@dimen/_139pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_weight="0.15"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{pageAccountVM.pageAccountModel.txtTwentyEight}"
                        style="@style/txtPoppinssemibold15" tools:text="@string/lbl_28"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearRowtotaldonasi"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_21pxv"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTotalDonasi"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:layout_marginStart="@dimen/_19pxh"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_weight="0.52"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{pageAccountVM.pageAccountModel.txtTotalDonasi}"
                        style="@style/txtPoppinsmedium15_1" tools:text="@string/lbl_total_donasi"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtRp508000"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_6pxv"
                        android:layout_marginEnd="@dimen/_21pxh"
                        android:layout_marginStart="@dimen/_91pxh"
                        android:layout_marginTop="@dimen/_13pxv"
                        android:layout_weight="0.48"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{pageAccountVM.pageAccountModel.txtRp508000}"
                        style="@style/txtPoppinssemibold15" tools:text="@string/lbl_rp_508_000"/>
                </LinearLayout>
            </LinearLayout>
            <EditText
                android:background="@drawable/rectangle_bg_blue_800_radius_8"
                android:drawableEnd="@drawable/img_settings_white_a700"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/msg_hubungkan_ewall"
                android:id="@+id/etGroupNine" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_20pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@={pageAccountVM.pageAccountModel.etGroupNineValue}"
                android:textColorHint="@color/white_A700"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_blue_800_radius_8"
                android:drawableEnd="@drawable/img_settings_white_a700"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_tampilan"
                android:id="@+id/etGroupEight" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_20pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@={pageAccountVM.pageAccountModel.etGroupEightValue}"
                android:textColorHint="@color/white_A700"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_blue_800_radius_8"
                android:drawableEnd="@drawable/img_settings_white_a700"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_keamanan"
                android:id="@+id/etGroupSeven" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_20pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@={pageAccountVM.pageAccountModel.etGroupSevenValue}"
                android:textColorHint="@color/white_A700"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_blue_800_radius_8"
                android:drawableEnd="@drawable/img_settings_white_a700"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/msg_pengaturan_noti"
                android:id="@+id/etGroupSix" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_20pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@={pageAccountVM.pageAccountModel.etGroupSixValue}"
                android:textColorHint="@color/white_A700"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_blue_800_radius_8"
                android:drawableEnd="@drawable/img_settings_white_a700"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_legalitas"
                android:id="@+id/etGroupFive" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_20pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@={pageAccountVM.pageAccountModel.etGroupFiveValue}"
                android:textColorHint="@color/white_A700"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_blue_800_radius_8"
                android:drawableEnd="@drawable/img_settings_white_a700"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_hubungi_kami"
                android:id="@+id/etGroupFour" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_20pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@={pageAccountVM.pageAccountModel.etGroupFourValue}"
                android:textColorHint="@color/white_A700"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_blue_800_radius_8"
                android:drawableEnd="@drawable/img_forward"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_keluar"
                android:id="@+id/etGroupThree" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_22pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@={pageAccountVM.pageAccountModel.etGroupThreeValue}"
                android:textColorHint="@color/white_A700"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
        </LinearLayout>
    </LinearLayout>
</layout>
