<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="pageHomeVM" type="com.reynaldysapplication.app.modules.pagehome.data.viewmodel.PageHomeVM"/>
    </data>
    <FrameLayout android:id="@+id/frameStackfoto"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/framePageHome"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent" style="@style/groupStylewhite_A700">
            <LinearLayout android:id="@+id/linearColumnfoto"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius_1">
                <ImageView android:id="@+id/imageFoto"
                    android:layout_height="@dimen/_178pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    cornerRadius="@{@dimen/_15pxh}"
                    imageRes="@{@drawable/img_foto}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_foto"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDonasiKorbanB"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{pageHomeVM.pageHomeModel.txtDonasiKorbanB}"
                    style="@style/txtPoppinsbold15" tools:text="@string/msg_donasi_korban_b"/>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtDescription"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_width="match_parent"
                    android:text="@{pageHomeVM.pageHomeModel.txtDescription}"
                    style="@style/txtPoppinsmedium13" tools:text="@string/msg_kampung_pulo_sa"/>
                <ImageView android:id="@+id/imageFotoOne"
                    android:layout_height="@dimen/_178pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    cornerRadius="@{@dimen/_15pxh}"
                    imageRes="@{@drawable/img_foto_178x351}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_foto_178x351"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAyoBantuKorba"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{pageHomeVM.pageHomeModel.txtAyoBantuKorba}"
                    style="@style/txtPoppinsbold15" tools:text="@string/msg_ayo_bantu_korba"/>
                <TextView android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="match_parent"
                    android:text="@{pageHomeVM.pageHomeModel.txtLanguage}"
                    style="@style/txtPoppinsmedium13" tools:text="@string/msg_warga_yogya_saa"/>
                <ImageView android:id="@+id/imageFotoTwo"
                    android:layout_height="@dimen/_178pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    cornerRadius="@{@dimen/_15pxh}"
                    imageRes="@{@drawable/img_foto_178x351}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_foto_178x351"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearColumntombolnavitagi"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStyleblue_2">
                <ImageView android:id="@+id/imageTombolNavitagi"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginEnd="@dimen/_56pxh"
                    android:layout_marginStart="@dimen/_56pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="@dimen/_280pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_tombolnavitagi"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_tombolnavitagi"/>
                <ImageView android:id="@+id/imageLineOne"
                    android:layout_height="@dimen/_4pxh"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginEnd="@dimen/_57pxh"
                    android:layout_marginStart="@dimen/_57pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_26pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_line1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_line1"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageLogo"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_130pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_81pxh"
                android:layout_marginStart="@dimen/_81pxh"
                android:layout_width="@dimen/_202pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_logo_130x202}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_logo_130x202"/>
        </FrameLayout>
    </FrameLayout>
</layout>
